--- a/BuscadorDeCurosos/composer.json
+++ b/BuscadorDeCurosos/composer.json
@@ -11,6 +11,6 @@
     "require": {
         "guzzlehttp/guzzle": "^6.5",
         "symfony/dom-crawler": "^4.2",
-        "symfony/css-selector": "^5.0"
+        "ymfony/css-selector": "^4.4"
     }
 }
