--- a/BuscadorDeCurosos/composer.json
+++ b/BuscadorDeCurosos/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "phan/phan": "^2.6"
     }
 }
