--- a/BuscadorDeCurosos/composer.json
+++ b/BuscadorDeCurosos/composer.json
@@ -22,5 +22,18 @@
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "*",
         "phan/phan": "^2.6"
+    },
+    "scripts": {
+        "test": "phpunit tests\\TestBuscadorDeCursos.php",
+        "cs": "phpcs --standard=PSR12 src/",
+        "phan": "vendor\\bin\\phan --allow-polyfill-parser",
+        "check": [
+            "@phan",
+            "@cs",
+            "@test"
+        ]
+    },
+    "scripts-descriptions": {
+        "check": "Roda as verificações do código. PHAN, PHPCS e PHPUNIT."
     }
 }
